      + @mlunit_gui_listener added, overtaking the update mechanisms
        from former @gui_test_result, making it obsolete
      + @gui_test_result deleted
      + @mlunit_suite_runner added, as reusable mechanism to execute
        one test suite
      + @mlunit_errorinfo centralizes all error parsing and string output
      + failures also handled by @mlunit_errorinfo

  - simplify error list item names in GUI to omit the suite name, as test suites
    cannot nest anymore

  - Fix: assert() calls break R2006b compatibility.
  - Fix: mat2str displays strings differently on R2006b and probably before.
  - Fix: function stringification contains whitespace on R2006b, but not later.
  - Fix: errors in a set_up fixture prevent execution of the tear_down
    fixture and mlunit_param reversion
  - Fix: Invalid jUnit XML from hapless MATLAB error message [B#20]
  - Fix: jUnit XML indentation sometimes applied to mid-line tags

  [B#20] https://sourceforge.net/p/mlunit/bugs/20/


mlUnit 1.6.7 (2015-01-08)
-------------------------

  - Added assert_matfile_equals: Raise an error if two mat Files differ. [F#12]
  - Added support for partial stack comparison in assert_error.
  - Test suite functions may declare their host function on the first or
    succeeding lines.
  - assert_equals failure prints differences on top of each other, instead of
    next to teach other for improved readability
  - Improved recursive_test_run's output for readability. Which functions failed
    should now be easily discernible. Of course, random warnings and disps still
    clutter the output. [F#14]
  - Failures now only print a part of the stack trace and hides the higher
    calling chain.
  - assert_* functions provide default failure message if none given
  - Failures now recognized by typed error. Still needs magic string for masking
    the actual error message.
  - Sample directory for assert failure outputs.
  - Enable (admittedly hacked) unit testing for private functions.