@@ -41,7 +41,7 @@ filtered_files = {'assert_true', ...
                   'assert_error', ...
                   'assert_warning', ...
                   'abstract_assert_equals', ...
-                  'fail', ...
+                  'mlunit_fail', ...
                   };
 while ~isempty(stack) && any(strcmpi(stack(1).filename, filtered_files))
     stack(1)=[];
