@@ -19,7 +19,7 @@ function assert_true(expr, varargin)
 %     % asserts variable arg being a cell array; specifies a custom message
 %     assert_true(iscell(arg), 'Input argument is no cell array');
 %
-%  See also  FAIL, ASSERT_FALSE
+%  See also  MLUNIT_FAIL, ASSERT_FALSE
 
 %  This Software and all associated files are released unter the 
 %  GNU General Public License (GPL), see LICENSE for details.
@@ -27,5 +27,5 @@ function assert_true(expr, varargin)
 %  $Id: assert_true.m 167 2012-06-06 16:10:56Z alexander.roehnsch $
 
 if nargin >= 1 && ~expr
-   fail(varargin{:});
+   mlunit_fail(varargin{:});
 end;
