@@ -49,7 +49,7 @@ function filtered_stack = loc_filter(stack)
 function stack = loc_sample_stack()
 
     stackinfos = { ...
-        'C:\mlunit\src\assertions\fail.m',                        'fail',                  34; ...
+        'C:\mlunit\src\assertions\mlunit_fail.m',                 'mlunit_fail',           34; ...
         'C:\mlunit\src\assertions\assert_true.m',                 'assert_true',           30; ...
         'C:\mlunit\test\junit_provocation\test_junit_error.m',    'test_that',             15; ...
         'C:\mlunit\src\@function_test_case\run_test.m',           'run_test',              21; ...
